feat(job): support react client
Support react js client
