# openapi3.yaml
@@ -10,6 +10,14 @@ servers:
   - url: http://localhost:8081
 paths:
   /jobs:
+    options:
+      operationId: options
+      summary: CORS preflight OPTIONS request
+      tags:
+        - jobs
+      responses:
+        204:
+          description: No Content
     post:
       operationId: createJob
       summary: Add a new ingestion job
@@ -44,7 +52,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/jobs'
         204:
-          description: OK
+          description: No Content
         '5XX':
           $ref: '#/components/responses/unexpectedError'
   /jobs/{jobId}:
